Update 8.2 Constant Members.md

--- a/64030183/Labs/8.2 Constant Members.md
+++ b/64030183/Labs/8.2 Constant Members.md
@@ -27,6 +27,18 @@ namespace ConstantMemberExample
 }
 ```
 
+![image](https://user-images.githubusercontent.com/115066431/236664287-bab3b9ff-781f-4df7-b825-7a1d1aee05a8.png)
+
+```cs
+โค้ดด้านบนเป็นโปรแกรมที่ใช้สำหรับคำนวณพื้นที่ของวงกลมโดยใช้ค่ารัศมีของวงกลม ซึ่งมีหลักการทำงานดังนี้
+
+1.ประกาศตัวแปรชื่อ radius และกำหนดค่าเท่ากับ 5.0
+2.ประกาศตัวแปรคงที่ชื่อ PI และกำหนดค่าเท่ากับ 3.14159
+3.แสดงข้อความ "Welcome, this program calculates the area of a circle" บนหน้าจอ
+4.แสดงค่ารัศมีของวงกลมโดยใช้ Console.WriteLine() และใช้ {radius:f} เพื่อกำหนดจำนวนเลขหลังจุดทศนิยมที่จะแสดง
+5.คำนวณหาพื้นที่ของวงกลมโดยใช้สูตร PI*r^2 และกำหนดผลลัพธ์ให้กับตัวแปร area
+6.แสดงค่าพื้นที่ของวงกลมโดยใช้ Console.WriteLine() และใช้ {area:f4} เพื่อกำหนดจำนวนเลขทศนิยมที่จะแสดงเป็น 4 ตำแหน่ง
+```
 
 ## 8.2.2 Member constant (Constant ของ class)
 Member constants มีลักษณะเหมือน local constants ในหัวข้อที่เรียนมาแล้ว  แต่ในกรณีนี้จะเป็นสมาชิกระดับคลาส 
@@ -57,8 +69,15 @@ namespace ConstantMemberExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066431/236664424-832304c3-1138-4e80-885f-6b46f0d1c5a4.png)
 
-
+```cs
+โค้ดนี้มี 2 classes คือ MyCircle และ Program
+ใน MyCircle มี constant ชื่อ PI ที่กำหนดค่าเป็น 3.14159
+ใน MyCircle มี static method ชื่อ PrintArea ที่รับพารามิเตอร์เป็น radius เพื่อคำนวณหาพื้นที่ของวงกลมและพิมพ์ผลลัพธ์ออกทางหน้าจอ
+ใน Program มี method ชื่อ Main ที่เป็น entry point ของโปรแกรม
+ใน Main method มีการเรียกใช้ static method PrintArea ของ MyCircle class โดยส่งพารามิเตอร์ radius เป็น 5.0f เพื่อคำนวณหาพื้นที่ของวงกลมและพิมพ์ผลลัพธ์ออกทางหน้าจอ
+```
 ## 8.2.3 Constant in expression
 constant สามารถถูกนำไปใช้ใน expression ได้เช่นเดียวกับ variable ทั่วๆ ไป 
 ต่างจาก variable ตรงที่ไม่สามารถเปลี่ยนค่าได้
@@ -91,7 +110,15 @@ namespace ConstantMemberExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066431/236664516-6c48ee79-a2ae-4bb7-8866-429adbc8e9bc.png)
 
+```cs
+โค้ดด้านบนมีไว้สำหรับคำนวณพื้นที่และเส้นรอบวงของวงกลม โดยใช้ค่าคงที่ PI ซึ่งถูกกำหนดโดย const และมีค่าเท่ากับ 3.14159 ดังนั้น PI2 คือค่าคงที่ที่เท่ากับค่า PI คูณ 2.0
+
+MyCircle คือคลาสที่มีสองเมท็อด คือ PrintArea และ PrintCircumference ทั้งสองเมท็อดเป็นเมท็อด static ซึ่งหมายความว่าไม่ต้องสร้างอินสแตนซ์ของคลาสเพื่อเรียกใช้เมท็อด ในการคำนวณพื้นที่ของวงกลม เราใช้สูตร พื้นที่วงกลม = PI x รัศมี x รัศมี และสูตรเส้นรอบวงของวงกลม = PI x รัศมี x 2 ซึ่งได้ถูกนำมาใช้ใน PrintArea และ PrintCircumference ตามลำดับ
+
+ในฟังก์ชั่น Main เรียกใช้เมท็อด PrintArea และ PrintCircumference ของ MyCircle ด้วยการส่งพารามิเตอร์ radius ที่มีค่าเป็น 5.0 แต่ละเมท็อดจะคำนวณและแสดงผลลัพธ์ที่คำนวณได้ผ่านคำสั่ง Console.WriteLine()
+```
 ## 8.2.4 change value of constant
 ถ้าพยายามกำหนดค่าใหม่ให้แก่ constant จะเกิด error ในขั้นตอนการ compile
 
@@ -118,7 +145,17 @@ namespace ConstantMemberExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066431/236664686-62f75c04-9d03-4c24-a1cf-aaf8acc46ab8.png)
 
+```cs
+โค้ดด้านบนเป็นตัวอย่างการใช้ const member ในภาษา C# ในการคำนวณพื้นที่วงกลมโดยใช้ค่า Pi ที่กำหนดไว้เป็น constant ด้วยคีย์เวิร์ด const ดังนั้นค่าของ Pi จะไม่สามารถเปลี่ยนแปลงได้ในระหว่างการทำงานของโปรแกรม
+
+บรรทัดที่ 1: นิยามคลาส MyCircle
+บรรทัดที่ 2: กำหนดค่า Pi เป็น constant โดยใช้คีย์เวิร์ด const
+บรรทัดที่ 3-6: นิยาม static method PrintArea() ที่รับพารามิเตอร์เป็นความยาวของรัศมี (radius) แล้วคำนวณหาพื้นที่วงกลม โดยใช้ค่า Pi ที่กำหนดเป็น constant และแสดงผลลัพธ์ด้วย Console.WriteLine()
+บรรทัดที่ 8: นิยามคลาส Program ซึ่งเป็น entry point ของโปรแกรม
+บรรทัดที่ 9-11: เรียกใช้ static method PrintArea() ของคลาส MyCircle โดยส่งพารามิเตอร์ radius เท่ากับ 5.0 และแสดงผลลัพธ์บน Console
+```
 ## 8.2.5 public static constant
 
 เราสามารถกำหนด modifier ของ constant ให้เป็น public ได้  
@@ -144,13 +181,32 @@ namespace ConstantMemberExample
 }
 ```
 
+![image](https://user-images.githubusercontent.com/115066431/236664869-a7bd634f-0d02-45ad-a13b-3412e3eb7478.png)
+
+```cs
+มีการนิยามคลาส MyCircle ซึ่งเป็นคลาสที่เกี่ยวข้องกับการคำนวณพื้นที่ของวงกลม โดยในคลาสนี้มีตัวแปรคงที่ชื่อ PI ที่เก็บค่าค่าคงที่ PI ที่มีค่าเท่ากับ 3.14159
+ฟังก์ชัน PrintArea จะรับพารามิเตอร์เป็นรัศมีของวงกลม และนำไปคำนวณหาพื้นที่ของวงกลมตามสูตร PI x รัศมี x รัศมี โดย PI นี้จะเป็นค่าคงที่ที่ถูกกำหนดไว้ด้วย 3.14159
+ในฟังก์ชัน Main ของโปรแกรม จะเรียกใช้ฟังก์ชัน PrintArea ของคลาส MyCircle โดยส่งพารามิเตอร์เป็นค่ารัศมี 5.0
+โดยการรันโปรแกรมนี้จะแสดงผลลัพธ์ที่คำนวณหาพื้นที่ของวงกลมจากค่าคงที่ PI และค่ารัศมีที่ส่งเข้าไปในฟังก์ชัน PrintArea
+```
+
 
 ## คำถาม
 
 1. Local constants ต่างจาก member constants อย่างไร
+```cs
+Local constants คือ ค่าคงที่ที่ถูกประกาศในขอบเขตของ method หรือ block ซึ่งมีชีวิตอยู่เฉพาะในขอบเขตนั้น ๆ และไม่สามารถเข้าถึงได้จากภายนอกของ method หรือ block นั้น ๆ 
+member constants คือ ค่าคงที่ที่ถูกประกาศในคลาส ซึ่งสามารถเข้าถึงได้จากทุกส่วนของคลาส และอาจถูกเรียกใช้จากภายนอกคลาสโดยใช้ชื่อของคลาสตัวอื่น ๆ โดยไม่ต้องสร้างอ็อบเจ็กต์ของคลาสนั้น ๆ ขึ้นมาก่อน
+```
+
 
 2. Local constants สามารถเปลี่ยนค่าภายหลังได้หรือไม่
-
+```cs
+Local constants ไม่สามารถเปลี่ยนค่าภายหลังได้ เนื่องจากถูกกำหนดค่าเป็นค่าคงที่ (constant) ซึ่งไม่อนุญาตให้มีการเปลี่ยนแปลงค่าหลังจากกำหนดค่าไว้แล้ว
+```
 3. Member constants สามารถเปลี่ยนค่าภายหลังได้หรือไม่
+```cs
+Member constants ไม่สามารถเปลี่ยนค่าภายหลังได้ เนื่องจากเป็นค่าคงที่ (constant) ที่ถูกกำหนดไว้ในระหว่างการรันโปรแกรม และไม่สามารถแก้ไขได้เพราะเป็นค่าคงที่
+```
 
  
