--- a/64030183/Labs/8.3 Properties.md
+++ b/64030183/Labs/8.3 Properties.md
@@ -32,6 +32,9 @@ namespace PropertyExample
 }
 ```
 
+![image](https://user-images.githubusercontent.com/115066431/236665164-054caafe-a6e3-41fa-9b2e-dd83d26dcb77.png)
+
+
 ## 8.3.2 เพิ่ม property
 
 รันโปรแกรมต่อไปนี้และบันทึกผล
@@ -59,6 +62,7 @@ namespace PropertyExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066431/236665191-5e03f07e-8ddb-4645-9d6b-6e00e197e6b3.png)
 
 
 ## 8.3.3  การใช้งาน getter/setter
@@ -91,6 +95,10 @@ namespace PropertyExample
 }
 ```
 
+![image](https://user-images.githubusercontent.com/115066431/236665391-d1d10ca1-df0b-421b-9ab6-97ba6a5befa9.png)
+
+
+
 
 ## 8.3.4 properties calculation
 
@@ -117,6 +125,9 @@ namespace PropertyExample
     }
 }
 ```
+
+![image](https://user-images.githubusercontent.com/115066431/236665412-0c96b928-0ab0-4dde-8622-538fcfe2189f.png)
+
 
 ## 8.3.5 properties calculation
 
@@ -146,6 +157,8 @@ namespace PropertyExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066431/236665441-6948a9f5-e7b7-4d22-9f1f-5fe32fec0b5b.png)
+
 
 ## 8.3.6 properties calculation
 
@@ -186,13 +199,27 @@ namespace PropertyExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066431/236665470-2f0b93cf-4caa-428b-ac85-691b94e91fe4.png)
+
 
 ## คำถาม
 
 1. Fields และ properties ต่างกันอย่างไร
-
+```cs
+Fields คือตัวแปรที่ใช้เก็บข้อมูลในคลาส ซึ่งสามารถเข้าถึงได้โดยตรงผ่านชื่อตัวแปร ซึ่งสามารถกำหนดค่าได้ตลอดเวลาตามที่ต้องการ
+Properties คือสมาชิกของคลาสที่เกี่ยวข้องกับการเข้าถึงหรือกำหนดค่าของตัวแปรในคลาส โดยใช้เมทอด getter และ setter เพื่อเข้าถึงหรือกำหนดค่าได้ โดย Properties จะเข้าถึงได้ผ่านชื่อ Properties แทนที่จะเข้าถึงตัวแปรเลย
+```
 2. เมื่อใดควรใช้ field และเมื่อใดควรใช้ properties
+```cs
+ในกรณีที่ต้องการใช้งานข้อมูลภายในคลาสโดยตรง โดยไม่ต้องมีการกำหนดเงื่อนไขในการเข้าถึงข้อมูล ก็สามารถใช้ field ได้เลย แต่ถ้าต้องการเพิ่มเงื่อนไขในการเข้าถึงข้อมูล เช่น ตรวจสอบความถูกต้องของข้อมูลก่อนที่จะกำหนดค่า หรือต้องการกำหนดสิทธิ์ในการเข้าถึงข้อมูล ก็ควรใช้ Properties แทน
+```
 
 3. value ใน setter หมายถึงอะไร
+```cs
+value ใน setter หมายถึงค่าที่ถูกส่งเข้ามาเพื่อกำหนดค่าให้กับ property นั้นๆ โดย value เป็น keyword ที่ใช้ในการอ้างอิงถึงค่าที่ถูกส่งเข้ามา และสามารถนำค่านั้นไปใช้ในการกำหนดค่าของ property ได้
+```
 
 4. return ใน setter ต้องมี type ตรงกับอะไร
+```cs
+Setter ไม่ได้ต้องการการ return ค่าใด ๆ เนื่องจาก setter มีหน้าที่เป็นการกำหนดค่าให้กับ property ตามที่กำหนดไว้ ดังนั้น ไม่จำเป็นต้องมีการระบุชนิดของค่าที่จะ return ออกจาก setter ในภาษา C# นั้น ปกติจะใช้คำว่า void ในการระบุว่า setter นี้ไม่มีการ return ค่าอะไรกลับไป แต่ถ้าต้องการ return ค่าใด ๆ ออกจาก setter ก็สามารถทำได้โดยการกำหนดค่าคืนใน getter ของ property นั้น ๆ แทนการ return จาก setter โดยตรง
+```
