--- a/Labs/8.1 Static Member.md
+++ b/Labs/8.1 Static Member.md
@@ -34,6 +34,9 @@ namespace StaticMemberExample
 }
 
 ```
+![ภาพ](https://user-images.githubusercontent.com/112167732/236670770-f2f5d126-6bc4-4af1-9ab5-7f98c60c0dd4.png)
+
+
 
 ## 8.1.2 ให้อธิบายการทำงานของโปรแกรมต่อไปนี้ พร้อมทั้งบันทึกผลการทดลอง
 ```cs
@@ -69,6 +72,9 @@ namespace StaticMemberExample
 }
 
 ```
+![ภาพ](https://user-images.githubusercontent.com/112167732/236670780-a7a47b18-c4cd-4e62-b1fb-6e102a48802c.png)
+
+
 
 ## 8.1.3 ให้อธิบายการทำงานของโปรแกรมต่อไปนี้ พร้อมทั้งบันทึกผลการทดลอง
 
@@ -113,8 +119,9 @@ namespace StaticMemberExample
     }
 }
 ```
-```cs
-```
+![ภาพ](https://user-images.githubusercontent.com/112167732/236670794-6b104366-2a14-444c-8577-0cb78a20f4fb.png)
+
+
 
 ## 8.1.4 ให้อธิบายการทำงานของโปรแกรมต่อไปนี้ พร้อมทั้งบันทึกผลการทดลอง
 
@@ -152,11 +159,20 @@ namespace StaticMemberExample
     }
 }
 ```
+![ภาพ](https://user-images.githubusercontent.com/112167732/236670809-521345b7-f0a6-4ae5-96cb-b0bcae37aafb.png)
+
 
 
 ## คำถาม
 
 1. Static member ต่างจาก instance member  อย่างไร
+```cs
+Static member ต่างจาก instance member อย่างไรStatic member คือตัวแปรหรือ method ที่เพิ่ม keyword static
+instance member คือตัวแปรหรือ method ที่อยู่ในคลาส
+```
 
 2. สถานการณ์ใดที่ควรใช้ static member
-
+```cs
+สถานการณ์ใดที่ควรใช้ static member
+เมื่อต้องการให้ค่าของตัวแปรหรือ method ใน class โดยไม่สร้าง object ขึ้นมาก่อน
+```
