--- a/Labs/8.1 Static Member.md
+++ b/Labs/8.1 Static Member.md
@@ -167,12 +167,11 @@ namespace StaticMemberExample
 
 1. Static member ต่างจาก instance member  อย่างไร
 ```cs
-Static member ต่างจาก instance member อย่างไรStatic member คือตัวแปรหรือ method ที่เพิ่ม keyword static
-instance member คือตัวแปรหรือ method ที่อยู่ในคลาส
+Static member คือ ตัวแปร หรือ method ที่เพิ่ม keyword static
+instance member คือ ตัวแปร หรือ method ที่อยู่ในคลาส
 ```
 
 2. สถานการณ์ใดที่ควรใช้ static member
 ```cs
-สถานการณ์ใดที่ควรใช้ static member
 เมื่อต้องการให้ค่าของตัวแปรหรือ method ใน class โดยไม่สร้าง object ขึ้นมาก่อน
 ```
