--- a/Labs/8.2 Constant Members.md
+++ b/Labs/8.2 Constant Members.md
@@ -26,6 +26,8 @@ namespace ConstantMemberExample
     }
 }
 ```
+![ภาพ](https://user-images.githubusercontent.com/112167732/236671422-a6650410-2711-4602-bac9-7d4b7f289268.png)
+
 
 
 ## 8.2.2 Member constant (Constant ของ class)
@@ -57,6 +59,7 @@ namespace ConstantMemberExample
     }
 }
 ```
+![ภาพ](https://user-images.githubusercontent.com/112167732/236671442-cfe65f6c-8428-4450-b4d9-33961b1bd4cc.png)
 
 
 ## 8.2.3 Constant in expression
@@ -91,6 +94,8 @@ namespace ConstantMemberExample
     }
 }
 ```
+![ภาพ](https://user-images.githubusercontent.com/112167732/236671455-372f70ec-36d5-4469-87e5-a0a6432bf9c8.png)
+
 
 ## 8.2.4 change value of constant
 ถ้าพยายามกำหนดค่าใหม่ให้แก่ constant จะเกิด error ในขั้นตอนการ compile
@@ -118,6 +123,8 @@ namespace ConstantMemberExample
     }
 }
 ```
+![ภาพ](https://user-images.githubusercontent.com/112167732/236671464-f61674dd-9e53-4ef0-ab61-9eccd65cb7e9.png)
+
 
 ## 8.2.5 public static constant
 
@@ -143,14 +150,21 @@ namespace ConstantMemberExample
     }
 }
 ```
+![ภาพ](https://user-images.githubusercontent.com/112167732/236671470-1b9a6d05-8d61-4baf-b002-8f2eda5a6f67.png)
 
 
 ## คำถาม
 
 1. Local constants ต่างจาก member constants อย่างไร
-
+```cs
+Local constance คือ ตัวแปรที่ถูกกำหนดให้เป็นค่าคงที่ที่ประกาศไว้ในของ method Member constance คือ ตัวแปรที่ถูกกกำหนดเป็นค่าตรงทีซึ่งถูกประกาศไว้ใน class
+```
 2. Local constants สามารถเปลี่ยนค่าภายหลังได้หรือไม่
-
+```cs
+ใช้ไม่ได้ ถ้าต้องการแก้ให้แก้ในโค้ดเท่านั้น
+```
 3. Member constants สามารถเปลี่ยนค่าภายหลังได้หรือไม่
-
+```cs
+ใช้ไม่ได้ ถ้าต้องการแก้ให้แก้ในโค้ดเท่านั้น
+```
  
