--- a/Labs/8.3 Properties.md
+++ b/Labs/8.3 Properties.md
@@ -31,6 +31,8 @@ namespace PropertyExample
     }
 }
 ```
+![ภาพ](https://user-images.githubusercontent.com/112167732/236671682-69e31545-5d2b-4246-ad5e-bc5fc07f5cc3.png)
+
 
 ## 8.3.2 เพิ่ม property
 
@@ -59,6 +61,7 @@ namespace PropertyExample
     }
 }
 ```
+![ภาพ](https://user-images.githubusercontent.com/112167732/236671695-fde1055f-a75b-4df0-b14a-84c7846bfaab.png)
 
 
 ## 8.3.3  การใช้งาน getter/setter
@@ -90,6 +93,8 @@ namespace PropertyExample
     }
 }
 ```
+![ภาพ](https://user-images.githubusercontent.com/112167732/236671708-19557042-1327-4675-85ee-773daeebe156.png)
+
 
 
 ## 8.3.4 properties calculation
@@ -117,6 +122,9 @@ namespace PropertyExample
     }
 }
 ```
+![ภาพ](https://user-images.githubusercontent.com/112167732/236671723-be8020ab-1a89-49a4-a03e-66b06b14f314.png)
+
+
 
 ## 8.3.5 properties calculation
 
@@ -146,6 +154,8 @@ namespace PropertyExample
     }
 }
 ```
+![ภาพ](https://user-images.githubusercontent.com/112167732/236671727-d99a4aa9-140e-4129-8c79-d850737d613a.png)
+
 
 ## 8.3.6 properties calculation
 
@@ -186,13 +196,25 @@ namespace PropertyExample
     }
 }
 ```
+![ภาพ](https://user-images.githubusercontent.com/112167732/236671737-7318aa7c-4408-488e-a8fa-1f6fc9b456eb.png)
+
+
 
 ## คำถาม
 
 1. Fields และ properties ต่างกันอย่างไร
-
+```cs
+Field คือ ตัวแปรที่สามารถเปลี่ยนแปลงค่าได้ properties คือ วิธีการเข้าถึงและกำหนดค่าของตัวแปรภายในคลาส
+```
 2. เมื่อใดควรใช้ field และเมื่อใดควรใช้ properties
-
+```cs
+Field ใช้ตอนที่ต้องการเก็บข้อมูลโดยตรง properties ใช้ตอนที่ต้องการเข้าถึงหรือตั้งค่าตัวแปร
+```
 3. value ใน setter หมายถึงอะไร
-
+```cs
+ตัวแปรพิเศษ property ที่ใช้สำหรับเป็นตัวแทนของข้อมูลที่กำลังจะ set ให้กับ properties โดยข้อมูลที่จะ set ให้ properties ถูกเก็บไว้ใน value
+```
 4. return ใน setter ต้องมี type ตรงกับอะไร
+```cs
+ต้องมี type เป็นชนิดเดียวกับ properties
+```
