--- a/64030286/8.1 Static Member.md
+++ b/64030286/8.1 Static Member.md
@@ -35,6 +35,17 @@ namespace StaticMemberExample
 
 ```
 
+```
+1. ประกาศ class Cat โดยมี Instance member คือ ตัวแปร legs ชนิด int เป็นแบบ public และกำหนดค่าให้เท่ากับ 4
+2. ประกาศ class Duck โดยมี Static member คือ ตัวแปร legs ชนิด int เป็นแบบ public และกำหนดค่าให้เท่ากับ 2
+3. ประกาศ class Program แบบ internal คือ สามารถใช้ class นี้ได้เฉพ่าะใน namespace เดียวกันเท่านั้น
+4. สร้าง Object cat จาก class Cat 
+5. แสดงข้อความ Cat has 4 legs โดยเรียกใข้ผ่าน Object cat
+6. แสดงข้อความ Duck has 2 legs โดยเรียกใช้ผ่าน class Duck
+```
+
+![image](https://user-images.githubusercontent.com/115066261/235838879-e04f6e1f-faf9-4176-b0f4-44406017f8ff.png)
+
 ## 8.1.2 ให้อธิบายการทำงานของโปรแกรมต่อไปนี้ พร้อมทั้งบันทึกผลการทดลอง
 ```cs
 namespace StaticMemberExample
@@ -69,6 +80,21 @@ namespace StaticMemberExample
 }
 
 ```
+
+```
+1. ประกาศ class cat โดยมี Instance member แบบ public คือ legs ชนิด int ที่มีค่าคือ 4 static member แบบ public คือ count ชนิด int ที่มีค่าคือ 0 และมี constractor ที่จะเพิ่มค่า count ขึ้น 1 ทุกครั้งที่เรียกใช้หรือก็คือจะเพิ่มขึ้น 1 ทุกครั้งเมื่อสร้าง object จาก class Cat
+2. ประกาศ class program ที่มี method main 
+3. สร้าง object cat จาก class Cat
+4. แสดงค่า count จาก class Cat โดย count มีค่าเป็น 1
+5. สร้าง object cat1 จาก class Cat
+6. แสดงค่า count จาก class Cat โดย count มีค่าเป็น 2
+7. สร้าง array ของ class Cat โดยให้ array โดยกำขนดขนาดของ array ให้เท่ากับ 10
+8. แสดงค่า count จาก class Cat โดย count มีค่าเป็น 2
+9. สร้าง object catArray โดยใช้ loop for เป็นจำนวน 10 ครั้ง
+10. แสดงค่า count จาก class Cat โดย count มีค่าเป็น 12
+```
+
+![image](https://user-images.githubusercontent.com/115066261/235840935-2a5f56f8-47f1-438e-9c9a-9cd0df45b062.png)
 
 ## 8.1.3 ให้อธิบายการทำงานของโปรแกรมต่อไปนี้ พร้อมทั้งบันทึกผลการทดลอง
 
@@ -114,6 +140,23 @@ namespace StaticMemberExample
 }
 ```
 
+```
+1. ประกาศ class Cat โดยกำหนด Instance member คือ legs และ Static member คือ count
+2. ประกาศ constractor ที่จะเพิ่มค่า count ขึ้น 1 เมื่อสร้าง object
+3. ประกาศ methods PrintCatCount ที่จะแสดงค่า count ตามเงื่อนไข คือ ถ้า count = 1 จะแสดงค่า count และตามด้วย cat ถ้า count > 1 จะแสดงค่า count และตามด้วย cats และถ้าไม่ตรงตามเงื่อนไขใดเลยจะแสดงข้อความว่า Invalid number of cats
+4. ประกาศ class Program ที่มี method main 
+5. สร้าง object cat จาก class Cat
+6. เรียกใช้ method PrintCatCount จาก class Cat
+7. สร้าง object cat จาก class Cat
+8. เรียกใช้ method PrintCatCount จาก class Cat
+9. สร้าง array ของ class Cat โดยให้ array โดยกำขนดขนาดของ array ให้เท่ากับ 10
+10. เรียกใช้ method PrintCatCount จาก class Cat
+11. สร้าง object catArray โดยใช้ loop for เป็นจำนวน 10 ครั้ง
+12. เรียกใช้ method PrintCatCount จาก class Cat
+```
+
+![image](https://user-images.githubusercontent.com/115066261/235843413-b9f69656-c5ce-4a6b-9fe1-49b51ba04423.png)
+
 ## 8.1.4 ให้อธิบายการทำงานของโปรแกรมต่อไปนี้ พร้อมทั้งบันทึกผลการทดลอง
 
 ```cs
@@ -151,10 +194,82 @@ namespace StaticMemberExample
 }
 ```
 
+```
+1. ประกาศ class Cat โดยกำหนด Instance member คือ legs และ Static member คือ count
+2. ประกาศ constractor ที่จะเพิ่มค่า count ขึ้น 1 เมื่อสร้าง object
+3. ประกาศ methods PrintCatCount ที่จะแสดงค่า count ตามเงื่อนไข คือ ถ้า count = 1 จะแสดงค่า count และตามด้วย cat ถ้า count > 1 จะแสดงค่า count และตามด้วย cats และถ้าไม่ตรงตามเงื่อนไขใดเลยจะแสดงข้อความว่า Invalid number of cats
+4. ประกาศ class Program ที่มี method main 
+5. สร้าง object cat จาก class Cat
+6. เรียกใช้ method PrintCatCount จาก class Cat
+7. สร้าง object cat จาก class Cat
+8. เรียกใช้ method PrintCatCount จาก class Cat โดยเรียกใช้ผ่าน ชื่อตัวแปร cat1
+
+โปรแกรมไม่สามารถรันได้เนื่องจากไม่สามารถเรียกใช้ method ผ่านชื่อตัวแปรได้เนื่องจากเป้น static method จึงต้องเรียกใช้ผ่าน class เท่านั้น
+```
+
+![image](https://user-images.githubusercontent.com/115066261/235845752-9366ad6d-b895-4a17-adaa-1a56010dee08.png)
+
+
+หากตเองการให้โปรแกรมสามารถรันได้ต้องสร้าง method ใหม่ขึ้นมารองรับการเรียกใช้งานผ่าน object
+```cs
+namespace StaticMemberExample
+{
+    class Cat
+    {
+        public int legs = 4;
+        public static int count = 0;
+        public Cat()
+        {
+            count++;
+        }
+        public static void PrintCatCount()
+        {
+            if (count == 1)
+                Console.WriteLine($"There is {count} cat");
+            else if (count > 1)
+                Console.WriteLine($"There are {count} cats");
+            else
+                Console.WriteLine($"Invalid number of cats");
+        }
+        public void printcatcount()
+        {
+            if (count == 1)
+                Console.WriteLine($"There is {count} cat");
+            else if (count > 1)
+                Console.WriteLine($"There are {count} cats");
+            else
+                Console.WriteLine($"Invalid number of cats");
+        }
+    }
+
+    internal class Program
+    {
+        static void Main(string[] args)
+        {
+            Cat cat = new Cat();
+            Cat.PrintCatCount();
+            Cat cat1 = new Cat();
+            cat1.printcatcount();
+        }
+    }
+}
+```
+
+![image](https://user-images.githubusercontent.com/115066261/235882479-39201ec5-78ad-404f-8d04-fa19f2a54044.png)
 
 ## คำถาม
 
 1. Static member ต่างจาก instance member  อย่างไร
 
-2. สถานการณ์ใดที่ควรใช้ static member
+```cs
+- Static mumber คือ ตัวแปรหรือ method ที่เพิ่ม keyword static ในตอนที่ประกาศตัวแปรหรือ method เช่น public static int count = 0; public static void printcatcount(){}
+  โดยตัวแปรและ method ที่เป็น static จะสร้างในตอนที่สร้าง class เพียงครั้งเดียวเท่านั้น สามารถเรียกใช้งานได้โดยสร้าง พิมพ์ชื่อคลาสและตามด้วยชื่อตัวแปรหรือ method เช่น Cat.printcatcount();
+- Instance member คือ ตัวแปรหรือ method ที่อยู่ในคลาส เช่น public int count = 0; public void princatcont(){} โดยตัวแปรและ method ที่เป็น Intance จะถูกสร้างใหม่ทุกครั้งที่สร้าง object
+  สามารถเรียกใช้ได้โดยสร้าง object และเรียกใช้งาน method หรือตัวแปร เช่น 
+  Cat cat = new Cat(); cat.count++; cat.prntcatcount();
+```
 
+2. สถานการณ์ใดที่ควรใช้ static member
+```
+เมื่อต้องการให้ค่าของตัวแปรหรือ method ใน class นั้นๆสามารถเข้าถึงได้โดยไม่ต้องส้ราง object ขึ้นมาก่อน
+```
