--- a/64030207/8.1 Static Member.md
+++ b/64030207/8.1 Static Member.md
@@ -44,7 +44,7 @@ namespace StaticMemberExample
 6. แสดงข้อความ Duck has 2 legs โดยเรียกใช้ผ่าน class Duck
 ```
 
-![image](https://user-images.githubusercontent.com/115066261/235838879-e04f6e1f-faf9-4176-b0f4-44406017f8ff.png)
+![ภาพ](https://github.com/Sittinon-Sawatdemongkol/Week-08/assets/115066278/802d7fe5-1a09-4e2c-b4ad-82cf6ee91dda)
 
 ## 8.1.2 ให้อธิบายการทำงานของโปรแกรมต่อไปนี้ พร้อมทั้งบันทึกผลการทดลอง
 ```cs
@@ -94,7 +94,7 @@ namespace StaticMemberExample
 10. แสดงค่า count จาก class Cat โดย count มีค่าเป็น 12
 ```
 
-![image](https://user-images.githubusercontent.com/115066261/235840935-2a5f56f8-47f1-438e-9c9a-9cd0df45b062.png)
+![ภาพ](https://github.com/Sittinon-Sawatdemongkol/Week-08/assets/115066278/ec67fa66-e752-4598-8d81-265349b55268)
 
 ## 8.1.3 ให้อธิบายการทำงานของโปรแกรมต่อไปนี้ พร้อมทั้งบันทึกผลการทดลอง
 
@@ -155,7 +155,7 @@ namespace StaticMemberExample
 12. เรียกใช้ method PrintCatCount จาก class Cat
 ```
 
-![image](https://user-images.githubusercontent.com/115066261/235843413-b9f69656-c5ce-4a6b-9fe1-49b51ba04423.png)
+![ภาพ](https://github.com/Sittinon-Sawatdemongkol/Week-08/assets/115066278/c14613a2-5cc8-4aa5-9472-67fc3ecb2926)
 
 ## 8.1.4 ให้อธิบายการทำงานของโปรแกรมต่อไปนี้ พร้อมทั้งบันทึกผลการทดลอง
 
@@ -207,10 +207,10 @@ namespace StaticMemberExample
 โปรแกรมไม่สามารถรันได้เนื่องจากไม่สามารถเรียกใช้ method ผ่านชื่อตัวแปรได้เนื่องจากเป้น static method จึงต้องเรียกใช้ผ่าน class เท่านั้น
 ```
 
-![image](https://user-images.githubusercontent.com/115066261/235845752-9366ad6d-b895-4a17-adaa-1a56010dee08.png)
+![ภาพ](https://github.com/Sittinon-Sawatdemongkol/Week-08/assets/115066278/82cdcbd0-18da-47fa-817d-ea2ad06a7c39)
 
 
-หากตเองการให้โปรแกรมสามารถรันได้ต้องสร้าง method ใหม่ขึ้นมารองรับการเรียกใช้งานผ่าน object
+หากต้องการให้โปรแกรมสามารถรันได้ต้องสร้าง method ใหม่ขึ้นมารองรับการเรียกใช้งานผ่าน object
 ```cs
 namespace StaticMemberExample
 {
@@ -255,7 +255,7 @@ namespace StaticMemberExample
 }
 ```
 
-![image](https://user-images.githubusercontent.com/115066261/235882479-39201ec5-78ad-404f-8d04-fa19f2a54044.png)
+![ภาพ](https://github.com/Sittinon-Sawatdemongkol/Week-08/assets/115066278/b6aa2d7e-8d3b-40b0-8d48-901e76e75dba)
 
 ## คำถาม
 
