Update 8.2 Constant Members.md

--- a/64030207/8.2 Constant Members.md
+++ b/64030207/8.2 Constant Members.md
@@ -35,7 +35,7 @@ namespace ConstantMemberExample
 6. แสดงค่า area
 ```
 
-![image](https://user-images.githubusercontent.com/115066261/235884996-d0b701ca-5a8a-4c41-89f8-ec637f76139c.png)
+![ภาพ](https://github.com/Sittinon-Sawatdemongkol/Week-08/assets/115066278/a8ffca9e-83bd-44fc-a2b6-614c30ea1fbf)
 
 ## 8.2.2 Member constant (Constant ของ class)
 Member constants มีลักษณะเหมือน local constants ในหัวข้อที่เรียนมาแล้ว  แต่ในกรณีนี้จะเป็นสมาชิกระดับคลาส 
@@ -73,7 +73,7 @@ namespace ConstantMemberExample
 4. สร้าง class program และ method main จากนั้นก็เรียกใช้ method printarea จาก class  mycircle
 ```
 
-![image](https://user-images.githubusercontent.com/115066261/235888208-fec210ad-b0d3-42ba-bcad-f6f78b65680c.png)
+![ภาพ](https://github.com/Sittinon-Sawatdemongkol/Week-08/assets/115066278/bdded7f3-c0f1-4187-9af6-b205af730264)
 
 ## 8.2.3 Constant in expression
 constant สามารถถูกนำไปใช้ใน expression ได้เช่นเดียวกับ variable ทั่วๆ ไป 
@@ -115,7 +115,7 @@ namespace ConstantMemberExample
 5. ประกาศ class program และ method main ที่เรียกใช้ method printarea และ printcircumference จาก class mycircle โดยส่งค่า 5.0 เป็นพารามิเตอร์ไปยัง method
 ```
 
-![image](https://user-images.githubusercontent.com/115066261/235891172-d8154bcf-8efd-4ad5-982f-898d69332743.png)
+![ภาพ](https://github.com/Sittinon-Sawatdemongkol/Week-08/assets/115066278/1a70e975-179e-4e3c-894b-0b51d96adbac)
 
 ## 8.2.4 change value of constant
 ถ้าพยายามกำหนดค่าใหม่ให้แก่ constant จะเกิด error ในขั้นตอนการ compile
@@ -144,7 +144,7 @@ namespace ConstantMemberExample
 }
 ```
 
-![image](https://user-images.githubusercontent.com/115066261/235892309-fb0a71a8-e81e-458d-8e03-ba52df9adc18.png)
+![ภาพ](https://github.com/Sittinon-Sawatdemongkol/Week-08/assets/115066278/a2ef00ef-3327-425f-8439-1e416f45d08a)
 
 
 ## 8.2.5 public static constant
@@ -172,7 +172,7 @@ namespace ConstantMemberExample
 }
 ```
 
-![image](https://user-images.githubusercontent.com/115066261/235893165-a9cfb1d2-9708-43a0-98aa-10ee9008a3f3.png)
+![ภาพ](https://github.com/Sittinon-Sawatdemongkol/Week-08/assets/115066278/cc91b6b2-de72-4c23-9e7e-7ec1c6bbe6f3)
 
 
 ## คำถาม
