--- a/64030207/8.3 Properties.md
+++ b/64030207/8.3 Properties.md
@@ -32,7 +32,7 @@ namespace PropertyExample
 }
 ```
 
-![image](https://user-images.githubusercontent.com/115066261/235897488-c486c4c8-23ba-4f5e-9c78-7a87b7a3fac4.png)
+![ภาพ](https://github.com/Sittinon-Sawatdemongkol/Week-08/assets/115066278/b2f7741b-ddf1-4bcb-a147-b9bed96208b9)
 
 ## 8.3.2 เพิ่ม property
 
@@ -62,7 +62,7 @@ namespace PropertyExample
 }
 ```
 
-![image](https://user-images.githubusercontent.com/115066261/235897919-6d5384c9-42df-4527-a448-e27526fc374a.png)
+![ภาพ](https://github.com/Sittinon-Sawatdemongkol/Week-08/assets/115066278/372f55e5-1507-4c37-af14-af207986a885)
 
 ## 8.3.3  การใช้งาน getter/setter
 
@@ -93,7 +93,7 @@ namespace PropertyExample
     }
 }
 ```
-![image](https://user-images.githubusercontent.com/115066261/235899542-423806a8-a58a-4a30-91a5-7ec2b48e270b.png)
+![ภาพ](https://github.com/Sittinon-Sawatdemongkol/Week-08/assets/115066278/14700b35-a0b1-4dcf-82ef-1bf0c5a62d06)
 ```cs
 Error เพราะ ไม่สามารถเรียกใช้ get และ set ในฐานะ method ได้ สามรถเรียกใช้ได้ เช่น 
 Garfield.Age = 5;
@@ -127,7 +127,7 @@ namespace PropertyExample
 }
 ```
 
-![image](https://user-images.githubusercontent.com/115066261/235900374-2a56aaac-879e-49d5-8c94-a9960fd555de.png)
+![ภาพ](https://github.com/Sittinon-Sawatdemongkol/Week-08/assets/115066278/bc8d5cbd-e83a-45d0-877d-839f5ac62540)
 
 ## 8.3.4 properties calculation
 
@@ -154,7 +154,7 @@ namespace PropertyExample
     }
 }
 ```
-![image](https://user-images.githubusercontent.com/115066261/235900701-7fe2aea4-bc00-478f-bdd6-c6df95565d06.png)
+![ภาพ](https://github.com/Sittinon-Sawatdemongkol/Week-08/assets/115066278/e2ce04b9-ee09-4510-8e71-d37e285e7640)
 
 ## 8.3.5 properties calculation
 
@@ -185,8 +185,7 @@ namespace PropertyExample
 }
 ```
 
-![image](https://user-images.githubusercontent.com/115066261/235901034-c9f0ac67-6ee6-4b92-8037-20914a6588e7.png)
-
+![ภาพ](https://github.com/Sittinon-Sawatdemongkol/Week-08/assets/115066278/32fab573-53a5-40af-9d37-18359d23c5ec)
 ## 8.3.6 properties calculation
 
 รันโปรแกรมต่อไปนี้และบันทึกผล
@@ -227,7 +226,7 @@ namespace PropertyExample
 }
 ```
 
-![image](https://user-images.githubusercontent.com/115066261/235901687-19f8a98e-12b1-4214-9322-c23d3ffac0e6.png)
+![ภาพ](https://github.com/Sittinon-Sawatdemongkol/Week-08/assets/115066278/2c4fa079-aae7-4237-b32d-a3bb6752f0c6)
 
 ## คำถาม
 
