Update 8.1 Static Member.md

--- a/64030119/Labs/8.1 Static Member.md
+++ b/64030119/Labs/8.1 Static Member.md
@@ -34,6 +34,15 @@ namespace StaticMemberExample
 }
 
 ```
+```
+1. ประกาศ class Cat โดยมี Instance member คือ ตัวแปร legs ชนิด int เป็นแบบ public และกำหนดค่าให้เท่ากับ 4
+2. ประกาศ class Duck โดยมี Static member คือ ตัวแปร legs ชนิด int เป็นแบบ public และกำหนดค่าให้เท่ากับ 2
+3. ประกาศ class Program แบบ internal คือ สามารถใช้ class นี้ได้เฉพ่าะใน namespace เดียวกันเท่านั้น
+4. สร้าง Object cat จาก class Cat 
+5. แสดงข้อความ Cat has 4 legs โดยเรียกใข้ผ่าน Object cat
+6. แสดงข้อความ Duck has 2 legs โดยเรียกใช้ผ่าน class Duck
+```
+![image](https://github.com/PiyatidaPh/Week-08/assets/115066285/99825f27-bfe3-4201-9c09-a0516d21f3e3)
 
 ## 8.1.2 ให้อธิบายการทำงานของโปรแกรมต่อไปนี้ พร้อมทั้งบันทึกผลการทดลอง
 ```cs
@@ -69,6 +78,20 @@ namespace StaticMemberExample
 }
 
 ```
+```
+1. ประกาศ class cat โดยมี Instance member แบบ public คือ legs ชนิด int ที่มีค่าคือ 4 static member แบบ public คือ count ชนิด int ที่มีค่าคือ 0 และมี constractor ที่จะเพิ่มค่า count ขึ้น 1 ทุกครั้งที่เรียกใช้หรือก็คือจะเพิ่มขึ้น 1 ทุกครั้งเมื่อสร้าง object จาก class Cat
+2. ประกาศ class program ที่มี method main 
+3. สร้าง object cat จาก class Cat
+4. แสดงค่า count จาก class Cat โดย count มีค่าเป็น 1
+5. สร้าง object cat1 จาก class Cat
+6. แสดงค่า count จาก class Cat โดย count มีค่าเป็น 2
+7. สร้าง array ของ class Cat โดยให้ array โดยกำขนดขนาดของ array ให้เท่ากับ 10
+8. แสดงค่า count จาก class Cat โดย count มีค่าเป็น 2
+9. สร้าง object catArray โดยใช้ loop for เป็นจำนวน 10 ครั้ง
+10. แสดงค่า count จาก class Cat โดย count มีค่าเป็น 12
+```
+![image](https://github.com/PiyatidaPh/Week-08/assets/115066285/4fa3d35d-29fc-42f0-874d-74acfdcaa9a3)
+
 
 ## 8.1.3 ให้อธิบายการทำงานของโปรแกรมต่อไปนี้ พร้อมทั้งบันทึกผลการทดลอง
 
@@ -113,6 +136,22 @@ namespace StaticMemberExample
     }
 }
 ```
+```
+1. ประกาศ class Cat โดยกำหนด stance member คือ legs และ static member คือ count 
+2. ประกาศ constractor ที่จะเพิ่มค่า count ขึ้น 1 เมื่อสร้าง Object 
+3. ประกาศ methods PrintCatCount ที่จะแสดงค่า count ตามเงื่อนไข คือ ถ้า count = 1 จะแสดงค่า count และตามด้วย cat ถ้า count > 1 จะแสดงค่า count และตามด้วย cats และถ้าไม่ตรงตามเงื่อนไขใดเลยจะแสดงข้อความว่า Invalid number of cats
+4. ประกาศ class Program ที่มี method main
+5. สร้าง object cat จาก class cat 
+6. เรียกใช้ method PrintCatCount จาก class Cat
+7. สร้าง object cat จาก class Cat
+8. เรียกใช้ method PrintCatCount จาก class Cat
+9. สร้าง array ของ class Cat โดยให้ array โดยกำหนดขนาดของ array ให้เท่ากับ 10
+10. เรียกใช้ method PrintCatCount จาก class Cat
+11. สร้าง object catArray โดยใช้ loop for เป็นจำนวน 10 ครั้ง
+12. เรียกใช้ method PrintCatCount จาก class Cat
+```
+![image](https://github.com/PiyatidaPh/Week-08/assets/115066285/78e4a6a9-9600-4ecd-b461-06385c6f4ac3)
+
 
 ## 8.1.4 ให้อธิบายการทำงานของโปรแกรมต่อไปนี้ พร้อมทั้งบันทึกผลการทดลอง
 
@@ -150,11 +189,15 @@ namespace StaticMemberExample
     }
 }
 ```
+```
+โปรแกรมไม่สามารถรันได้เนื่องจากไม่สามารถเรียกใช้ method ผ่านชื่อตัวแปรได้เนื่องจากเป็น static method จึงต้องเรียกใช้ผ่าน class เท่านั้น
+```
+![image](https://github.com/PiyatidaPh/Week-08/assets/115066285/c1d1718f-e772-408b-8cc7-e60ca8868059)
 
 
 ## คำถาม
 
 1. Static member ต่างจาก instance member  อย่างไร
-
+static member คือตัวแปรหรือmethod สามารถเรียกใช้งานได้โดยสร้าง พิมพ์ชื่อคลาสและตามด้วยชื่อตัวแปรหรือmethod ส่วน Instance คือตัวแปรหรือmethod เหมือนกันแต่ต่างกันตรงที่ Instance คือตัวแปรหรือmethodที่อยู่ในคลาสสามารถเรียกใช้งานได้โดยสร้างobject และเรียกใช้งาน method หรือตัวแปร
 2. สถานการณ์ใดที่ควรใช้ static member
-
+เมื่อต้องการให้ค่าของตัวแปรหรือ method ใน class นั้นๆสามารถเข้าถึงได้โดยไม่ต้องสร้าง object ขึ้นมาก่อน
