Update 8.2 Constant Members.md

--- a/64030119/Labs/8.2 Constant Members.md
+++ b/64030119/Labs/8.2 Constant Members.md
@@ -26,7 +26,15 @@ namespace ConstantMemberExample
     }
 }
 ```
-
+```
+1. ประกาศตัวแปร และกำหนดค่าให้มีค่าเท่ากับ 0.5
+2. ประกาศตัวแปรคงที่ Pi ชนิด double และกำหนดค่าเท่ากับ3.14 
+3. แสดงข้อความยินดีต้อนรับ
+4. แสดงค่า radius 
+5. ประกาศตัวแปรdouble area มีค่าคือ Pi*radius*radius
+6. แสดงค่า area
+```
+![image](https://github.com/PiyatidaPh/Week-08/assets/115066285/6d647681-e9b9-477e-a38c-e7c0b9b34ffd)
 
 ## 8.2.2 Member constant (Constant ของ class)
 Member constants มีลักษณะเหมือน local constants ในหัวข้อที่เรียนมาแล้ว  แต่ในกรณีนี้จะเป็นสมาชิกระดับคลาส 
@@ -57,6 +65,13 @@ namespace ConstantMemberExample
     }
 }
 ```
+```
+1. ประกาศ class Mycircle 
+2. ประกาศค่าตัวแปรค่าคงที่ ชนิด double ที่ Pi
+3. ประกาศ Method PrintArea ที่รับค่า radius โดยประกาศตัวแปร area ที่มีค่าคือ Pi*radius*radius และแสดงผลค่า area ในแบบทศนิยม 4 ตำแหน่ง
+4. สร้าง class program และmethod main จากนั้นเรียกใช้ method printarea จาก class mycircle
+```
+![image](https://github.com/PiyatidaPh/Week-08/assets/115066285/01336778-cf77-4c44-acd8-ffad56da8a37)
 
 
 ## 8.2.3 Constant in expression
@@ -91,6 +106,15 @@ namespace ConstantMemberExample
     }
 }
 ```
+```
+1. ประกาศ class Mycircle 
+2. ประกาศค่าตัวแปรค่าคงที่ ชนิด double ที่ PI1 และ PI2
+3. ประกาศ  static method printArea ที่รับค่า radius โดยประกาศตัวแปร area ที่มีค่าคือ PI*radius*radius และแสดงผลค่า area ในแบบทศนิยม 4 ตำแหน่ง
+4. สร้าง static method printcircumference ที่รับค่า radius โดยประกาศตัวแปร circumference ที่มีค่าคือ PI2 * radius และแสดงผลค่า circumferense ในแบบทศนิยม 4 ตำแหน่ง
+5. ประกาศ class program และmethod main ที่เรียกใช้ method printarea และprintcircumference จาก class mycircle โดยส่งค่า 0.5 เป็นพารามิเตอร์ไปยัง method
+```
+![image](https://github.com/PiyatidaPh/Week-08/assets/115066285/3d81a513-61f0-42d8-b28b-25b13237da5a)
+
 
 ## 8.2.4 change value of constant
 ถ้าพยายามกำหนดค่าใหม่ให้แก่ constant จะเกิด error ในขั้นตอนการ compile
@@ -118,6 +142,8 @@ namespace ConstantMemberExample
     }
 }
 ```
+![image](https://github.com/PiyatidaPh/Week-08/assets/115066285/930b51a5-cee7-490f-ac4e-776ccddd817c)
+
 
 ## 8.2.5 public static constant
 
@@ -143,14 +169,15 @@ namespace ConstantMemberExample
     }
 }
 ```
+![image](https://github.com/PiyatidaPh/Week-08/assets/115066285/70a276d7-2173-4c28-9daf-9b75981966f8)
 
 
 ## คำถาม
 
 1. Local constants ต่างจาก member constants อย่างไร
-
+Local constants คือตัวแปรที่ถูกกำหนดให้เป็นค่าคงที่ที่ถูกประกาศไว้ในส่วนของmethod ส่วน member constant คือตัวแปรที่ถูกกำหนดเป็นค่าคงที่ซึ่งถูกประกาศไว้ใน class
 2. Local constants สามารถเปลี่ยนค่าภายหลังได้หรือไม่
-
+ไม่ได้ หากต้องการแก้ไขค่าคงที่ต้องแก้ไขที่ code เท่านั้น
 3. Member constants สามารถเปลี่ยนค่าภายหลังได้หรือไม่
-
+ไม่ได้ ถ้าต้องการแก้ไข้ค่าคงที่ต้องแก้ไขที่ code เท่านั้น
  
