--- a/64030119/Labs/8.3 Properties.md
+++ b/64030119/Labs/8.3 Properties.md
@@ -31,6 +31,7 @@ namespace PropertyExample
     }
 }
 ```
+![image](https://github.com/PiyatidaPh/Week-08/assets/115066285/0d1f6f41-201b-44d3-a802-d8a1f5760d81)
 
 ## 8.3.2 เพิ่ม property
 
@@ -59,6 +60,7 @@ namespace PropertyExample
     }
 }
 ```
+![image](https://github.com/PiyatidaPh/Week-08/assets/115066285/78dc6715-4e82-4dc3-98da-58075afb9f9b)
 
 
 ## 8.3.3  การใช้งาน getter/setter
@@ -90,6 +92,7 @@ namespace PropertyExample
     }
 }
 ```
+![image](https://github.com/PiyatidaPh/Week-08/assets/115066285/babfbd57-a9a9-429f-88a2-c6212127b778)
 
 
 ## 8.3.4 properties calculation
@@ -117,6 +120,7 @@ namespace PropertyExample
     }
 }
 ```
+![image](https://github.com/PiyatidaPh/Week-08/assets/115066285/0313b022-0752-4859-8663-23f875a6c3f6)
 
 ## 8.3.5 properties calculation
 
@@ -146,6 +150,7 @@ namespace PropertyExample
     }
 }
 ```
+![image](https://github.com/PiyatidaPh/Week-08/assets/115066285/547c4357-435f-4f7e-a3dc-0ac495eae480)
 
 ## 8.3.6 properties calculation
 
@@ -186,13 +191,17 @@ namespace PropertyExample
     }
 }
 ```
+![image](https://github.com/PiyatidaPh/Week-08/assets/115066285/46d06759-216f-4dff-a51d-80c8bdd73e6a)
 
 ## คำถาม
 
 1. Fields และ properties ต่างกันอย่างไร
-
+Field คือ ตัวแปรที่สามารถเปลี่ยนแปลค่าได้ซึ่งถูกประกาศในคลาสเพื่อเก็บข้อมูล
+properties คือ วิธีการเข้าถึงและกำหนดค่าของตัวแปรภายในคลาสโดยไม่ต้องเขียน method โดยตะใช้ท method getter and setter ที่มีอยู่แล้วมาใช้สำหรับอ่านและเขียนข้อมูลของตัวแปร
 2. เมื่อใดควรใช้ field และเมื่อใดควรใช้ properties
-
+Field ใช้ตอนที่ต้องการเก็บข้อมูลโดยตรงที่ไม่ต้องการการเข้าถึงและไม่ต้องการการตรวจสอบความถูกต้องของข้อมูล
+properties ใช้ตอนที่ต้องการเข้าถึงหรือตั้งค่าตัวแปรโดยต้อบงการให้มีการตรวจสอบความถูกต้องของข้อมูลที่รับเข้ามา และใช้ในตอนที่ต้องการคำนวณค่าข้อมูลเพื่อเก็บลงในคัวแปรโดยที่ไม่ต้องเขียน method เพื่อคำนวณค่า
 3. value ใน setter หมายถึงอะไร
-
+ตัวแปรพิเศษของ property ที่ใช้สำหรับเป็นตัวแทนของข้อมูลที่กำลังจะ set ให้กับ properties โดยข้อมูลที่จะ set ให้ properties จะถูกเก็บไว้ที่ value ก่อนนั่นเอง
 4. return ใน setter ต้องมี type ตรงกับอะไร
+ต้องมี type เป็นชนิดเดียวกับ properties
