--- a/64030213สุธีรา/Labs/8.2 Constant Members.md
+++ b/64030213สุธีรา/Labs/8.2 Constant Members.md
@@ -26,7 +26,15 @@ namespace ConstantMemberExample
     }
 }
 ```
-
+![image](https://github.com/Suthera213/Week-08/assets/115066359/11521d68-54d7-4029-b566-685f78f242e1)
+```
+1. ประกาศตัวแปร radius ชนิด double และกำหนดค่าเท่ากับ 5.0
+2. ประกาศตัวแปรคงที่ Pi ชนิด double และกำหนเค่าเท่ากับ 3.14
+3. แสดงข้อความยินดีต้อนรับ
+4. แสดงค่า radius 
+5. ประกาศตัวแปร double area มีค่าคือ Pi * radius*radius
+6. แสดงค่า area
+```
 
 ## 8.2.2 Member constant (Constant ของ class)
 Member constants มีลักษณะเหมือน local constants ในหัวข้อที่เรียนมาแล้ว  แต่ในกรณีนี้จะเป็นสมาชิกระดับคลาส 
@@ -57,8 +65,13 @@ namespace ConstantMemberExample
     }
 }
 ```
-
-
+![image](https://github.com/Suthera213/Week-08/assets/115066359/b6e63639-8317-42eb-b069-25a8ba733174)
+```
+1. ประกาศ class Mycircle
+2. ประกาศตัวแปรค่าคงที่ ชนิด double ชื่อ PI
+3. ประกาศ method PrintArea ที่รับค่า radius โดยประกาศตัวแปร area ที่มีค่าคือ PI * radius * radius และแสดงผลค่า area ในแบบทศนิยม 4 ตำแหน่ง
+4. สร้าง class program และ method main จากนั้นก็เรียกใช้ method printarea จาก class  mycircle
+```
 ## 8.2.3 Constant in expression
 constant สามารถถูกนำไปใช้ใน expression ได้เช่นเดียวกับ variable ทั่วๆ ไป 
 ต่างจาก variable ตรงที่ไม่สามารถเปลี่ยนค่าได้
@@ -91,6 +104,14 @@ namespace ConstantMemberExample
     }
 }
 ```
+![image](https://github.com/Suthera213/Week-08/assets/115066359/81597cdd-7cc1-4e6c-b031-dbe8be6946ad)
+```
+1. ประกาศ class mycircle
+2. ประกาตัวแปรคงที่ชนิด double ชื่อ PI และ PI2
+3. สร้าง static method printarea ที่รับค่า radius โดยประกาศตัวแปร area ที่มีค่าคือ PI * radius * radius และแสดงผลค่า area ในแบบทศนิยม 4 ตำแหน่ง
+4. สร้าง static method  printcircumference ที่รับค่า radius โดยประกาศตัวแปร circumference ที่มีค่าคือ PI2 * radius และแสดงผลค่า circumference ในแบบทศนิยม 4 ตำแหน่ง
+5. ประกาศ class program และ method main ที่เรียกใช้ method printarea และ printcircumference จาก class mycircle โดยส่งค่า 5.0 เป็นพารามิเตอร์ไปยัง method
+```
 
 ## 8.2.4 change value of constant
 ถ้าพยายามกำหนดค่าใหม่ให้แก่ constant จะเกิด error ในขั้นตอนการ compile
@@ -118,6 +139,7 @@ namespace ConstantMemberExample
     }
 }
 ```
+![image](https://github.com/Suthera213/Week-08/assets/115066359/117a4a7a-6b3b-4c9b-b8ac-de25cb8bb8db)
 
 ## 8.2.5 public static constant
 
@@ -143,14 +165,22 @@ namespace ConstantMemberExample
     }
 }
 ```
+![image](https://github.com/Suthera213/Week-08/assets/115066359/2b6f1cf0-eacc-4049-804a-0fb1283ae510)
 
 
 ## คำถาม
 
 1. Local constants ต่างจาก member constants อย่างไร
-
+```
+Local constance คือ ตัวแปรที่ถูกกำหนดให้เป้นค่าคงที่ซี่งถูกประกาศไว้ในส่วนของ method
+Member constants คือ ตัวแปรที่ถูกกำหนดเป้นค่าตงที่ซึ่งถูกประกาศไว้ใน class
+```
 2. Local constants สามารถเปลี่ยนค่าภายหลังได้หรือไม่
-
+```
+ไม่ได้ หากต้องการแก้ไขค่าคงที่ต้องแก้ไขในโค้ดเท่านั้น
+```
 3. Member constants สามารถเปลี่ยนค่าภายหลังได้หรือไม่
-
+```
+ไม่ได้ หากต้องการแก้ไขค่าคงที่ต้องแก้ไขในโค้ดเท่านั้น
+```
  
