--- a/64030213สุธีรา/Labs/8.3 Properties.md
+++ b/64030213สุธีรา/Labs/8.3 Properties.md
@@ -31,6 +31,7 @@ namespace PropertyExample
     }
 }
 ```
+![image](https://github.com/Suthera213/Week-08/assets/115066359/f086bbc8-254c-4ee7-8a79-156453214483)
 
 ## 8.3.2 เพิ่ม property
 
@@ -59,6 +60,7 @@ namespace PropertyExample
     }
 }
 ```
+![image](https://github.com/Suthera213/Week-08/assets/115066359/1d3ac632-9d9b-4a1a-be3c-78ec41332ba2)
 
 
 ## 8.3.3  การใช้งาน getter/setter
@@ -90,7 +92,40 @@ namespace PropertyExample
     }
 }
 ```
+![image](https://github.com/Suthera213/Week-08/assets/115066359/c170d800-cd89-4151-b30e-11dc841239af)
+```
+Error เพราะ ไม่สามารถเรียกใช้ get และ set ในฐานะ method ได้ สามรถเรียกใช้ได้ เช่น 
+Garfield.Age = 5;
+int catAge = Garfield.Age;
+```
+แก้ไขโค้ดเป็น
+![image](https://github.com/Suthera213/Week-08/assets/115066359/7c6d5897-c0c7-4190-8928-671151f72dee)
+```cshap
+using System.Drawing;
+namespace PropertyExample
+{
 
+    class Cat
+    {
+        public int Age { get; set; }
+        public Color SkinColor { get; set; }
+
+    }
+    internal class Program
+    {
+        static void Main(string[] args)
+        {
+            var Garfield = new Cat();
+            // callint setter
+            Garfield.Age = 5;
+
+            // calling getter
+            int catAge = Garfield.Age;
+            Console.WriteLine(catAge);
+        }
+    }
+}
+```
 
 ## 8.3.4 properties calculation
 
@@ -117,6 +152,7 @@ namespace PropertyExample
     }
 }
 ```
+![image](https://github.com/Suthera213/Week-08/assets/115066359/0ed14af7-5ca8-4e15-b1db-2a91aeececae)
 
 ## 8.3.5 properties calculation
 
@@ -146,6 +182,8 @@ namespace PropertyExample
     }
 }
 ```
+![image](https://github.com/Suthera213/Week-08/assets/115066359/4d6cf3ca-edd2-4a93-97f7-668a3a68a1f4)
+
 
 ## 8.3.6 properties calculation
 
@@ -186,13 +224,26 @@ namespace PropertyExample
     }
 }
 ```
+![image](https://github.com/Suthera213/Week-08/assets/115066359/ee714160-5984-4d57-8271-2fb2d318d963)
 
 ## คำถาม
 
 1. Fields และ properties ต่างกันอย่างไร
-
+```
+Field คือ ตัวแปรที่สามารถเปลี่ยนแปลค่าได้ซึ่งถูกประกาศในคลาสเพื่อเก็บข้อมูล
+properties คือ วิธีการเข้าถึงและกำหนดค่าของตัวแปรภายในคลาสโดยไม่ต้องเขียน method โดยตะใช้ท method getter and setter ที่มีอยู่แล้วมาใช้สำหรับอ่านและเขียนข้อมูลของตัวแปร
+```
 2. เมื่อใดควรใช้ field และเมื่อใดควรใช้ properties
-
+```
+Field ใช้ตอนที่ต้องการเก็บข้อมูลโดยตรงที่ไม่ต้องการการเข้าถึงและไม่ต้องการการตรวจสอบความถูกต้องของข้อมูล
+properties ใช้ตอนที่ต้องการเข้าถึงหรือตั้งค่าตัวแปรโดยต้อบงการให้มีการตรวจสอบความถูกต้องของข้อมูลที่รับเข้ามา และใช้ในตอนที่ต้องการคำนวณค่าข้อมูลเพื่อเก็บลงในคัวแปรโดยที่ไม่ต้องเขียน method เพื่อคำนวณค่า
+```
 3. value ใน setter หมายถึงอะไร
-
+```
+ตัวแปรพิเศษของ property ที่ใช้สำหรับเป็นตัวแทนของข้อมูลที่กำลังจะ set ให้กับ properties โดยข้อมูลที่จะ set ให้ properties จะถูกเก็บไว้ที่ value ก่อนนั่นเอง
+```
 4. return ใน setter ต้องมี type ตรงกับอะไร
+```
+ต้องมี type เป็นชนิดเดียวกับ properties
+
+```
