--- a/64030278/8.1 Static Member.md
+++ b/64030278/8.1 Static Member.md
@@ -34,10 +34,12 @@ namespace StaticMemberExample
 }
 
 ```
+![image](https://github.com/Poramat45/Week-08/assets/115066249/f561b19b-e07a-4902-a734-959232efb40b)
+
 * ในคลาส Cat มีตัวแปร legs ที่เป็นตัวแปร instance หมายความว่าแต่ละ object ที่สร้างจากคลาส Cat จะมีตัวแปร legs ของตัวเองแยกกันอยู่
 * ในคลาส Duck มีตัวแปร legs ที่เป็นตัวแปร static หมายความว่ามันจะถูกแชร์ร่วมกันทั้งหมดของ object ที่สร้างจากคลาส Duck ทั้งหมด ซึ่งจะไม่เกี่ยวข้องกับการสร้าง object เลย
 * ในฟังก์ชัน Main โปรแกรมสร้าง object ของคลาส Cat และ Duck จากนั้นแสดงผลลัพธ์เป็นจำนวนขาของแต่ละ object โดยใช้ตัวแปร legs ที่อยู่ใน Cat และ Duck ตามลำดับ <br>
-![](./Picture/Lab8_1.png)
+
 
 ## 8.1.2 ให้อธิบายการทำงานของโปรแกรมต่อไปนี้ พร้อมทั้งบันทึกผลการทดลอง
 ```cs
@@ -73,11 +75,13 @@ namespace StaticMemberExample
 }
 
 ```
+![image](https://github.com/Poramat45/Week-08/assets/115066249/48751c1e-6a3d-4003-8cf5-4d45c2073d6c)
+
 * ในคลาส Cat มีตัวแปร legs ที่เป็นตัวแปร instance และ count เป็นตัวแปร static ซึ่งจะถูกนับจำนวน object ที่สร้างจากคลาส Cat ทั้งหมด
 * ใน constructor ของ Cat จะเพิ่มค่า count ทุกครั้งที่สร้าง object ใหม่
 * ในฟังก์ชัน Main โปรแกรมสร้าง object ของคลาส Cat และแสดงผลลัพธ์จำนวนของ object แต่ละครั้งโดยใช้ตัวแปร count ที่อยู่ใน Cat โดยก่อนจะสร้าง array of Cat ต้องเรียกใช้งาน Cat.count อย่างน้อย 2 ครั้งเนื่องจาก count เป็นตัวแปร static และจะไม่มีการกำหนดค่าเริ่มต้นในการสร้าง object แรก
 * ค่า count เพิ่มขึ้นตามจำนวน object ที่สร้างขึ้นในตอนท้ายของโปรแกรมเป็น 10 ตัว และรวมกับ object ที่สร้างก่อนหน้านี้ทำให้มีจำนวน object ทั้งหมดเป็น 13 ตัว<br>
-![](./Picture/Lab8_2.png)
+
 ## 8.1.3 ให้อธิบายการทำงานของโปรแกรมต่อไปนี้ พร้อมทั้งบันทึกผลการทดลอง
 
 ```cs
@@ -121,9 +125,11 @@ namespace StaticMemberExample
     }
 }
 ```
+![image](https://github.com/Poramat45/Week-08/assets/115066249/a5bfacc9-18de-46fe-8849-919e43b48c35)
+
 * โปรแกรมนี้เป็นโปรแกรมที่ใช้สำหรับนับจำนวนแมวที่ถูกสร้างขึ้นโดยใช้คลาส Cat โดยมี static member ชื่อ count เพื่อนับจำนวนแมวที่ถูกสร้างขึ้น และมี static method ชื่อ PrintCatCount ซึ่งใช้สำหรับพิมพ์จำนวนแมวที่ถูกสร้างขึ้นไปแล้ว โดยจะตรวจสอบค่า count ว่ามีค่าเป็นเลขกี่ และพิมพ์ผลลัพธ์ออกมาตามเงื่อนไขที่กำหนดในเมธอด PrintCatCount
 * ใน Main method จะสร้างแมวขึ้นมา 3 ตัวและพิมพ์จำนวนแมวที่ถูกสร้างขึ้นไปแล้ว หลังจากนั้นจึงสร้างอีก 10 ตัวแมวขึ้นมา และพิมพ์จำนวนแมวทั้งหมดออกมาอีกครั้ง ผลลัพธ์ที่แสดงจะเป็นจำนวนแมวที่ถูกสร้างขึ้นมาในแต่ละขั้นตอนของโปรแกรม โดยจะเพิ่มขึ้นตามจำนวนการสร้างแมวที่เกิดขึ้นในแต่ละขั้นตอน ซึ่งแสดงผลลัพธ์เป็น "There is (are) x cat(s)." โดย x คือจำนวนแมวที่ถูกสร้างขึ้นโดยใช้คลาส Cat ในแต่ละขั้นตอนของโปรแกรม. ต่อมาก็จะมีการเรียกใช้ static method PrintCatCount เพื่อพิมพ์จำนวนแมวทั้งหมดในแต่ละขั้นตอนของโปรแกรมอีกครั้ง. <br>
-![](./Picture/Lab8_3.png)
+
 ## 8.1.4 ให้อธิบายการทำงานของโปรแกรมต่อไปนี้ พร้อมทั้งบันทึกผลการทดลอง
 
 ```cs
@@ -160,9 +166,11 @@ namespace StaticMemberExample
     }
 }
 ```
+![image](https://github.com/Poramat45/Week-08/assets/115066249/5b689a6b-74a7-40ab-be9a-b9d73e2581f5)
+
 * สร้างคลาส Cat ซึ่งประกอบไปด้วยสมาชิก legs ที่เป็นตัวแปร instance และ count ที่เป็นตัวแปร static และเมท็อด PrintCatCount() ที่ใช้สำหรับพิมพ์จำนวนแมวที่ถูกสร้างขึ้นมา ในเมท็อด Cat() ก็มีการเพิ่มค่าตัวแปร count เมื่อมีการสร้าง object ใหม่
 * ใน Main() ก็มีการสร้าง object cat และ cat1 ของคลาส Cat ตามลำดับ และใช้เมท็อด PrintCatCount() ในการพิมพ์จำนวนแมวที่ถูกสร้างขึ้น โดยใช้ Cat.PrintCatCount() เพื่อพิมพ์จำนวนแมวทั้งหมด เมื่อพิมพ์เสร็จจะได้ผลลัพธ์ออกมาว่า "There is 1 cat" เพราะว่าในขณะนี้มีแค่ object cat เท่านั้น จากนั้นจึงสร้าง object cat1 ต่อ และใช้ Cat.PrintCatCount() อีกครั้ง ซึ่งจะได้ผลลัพธ์ออกมาว่า "There are 2 cats" เนื่องจากว่ามีแมว 2 ตัวแล้ว <br>
-![](./Picture/Lab8_4.png)
+
 
 ## คำถาม
 
