Update 8.2 Constant Members.md

--- a/64030278/8.2 Constant Members.md
+++ b/64030278/8.2 Constant Members.md
@@ -26,8 +26,10 @@ namespace ConstantMemberExample
     }
 }
 ```
+![image](https://github.com/Poramat45/Week-08/assets/115066249/da513480-939e-4def-96a9-f9188916af42)
+
 * เป็นโปรแกรมที่ใช้ค่าคงที่ (constant) เพื่อกำหนดค่า PI เป็นค่าคงที่ แล้วใช้ในการคำนวณพื้นที่ของวงกลม โดยรับค่ารัศมีจากผู้ใช้งานผ่านพารามิเตอร์แล้วคำนวณและแสดงผลพื้นที่ของวงกลมในรูปแบบทศนิยม 4 ตำแหน่งด้วยเมธอด WriteLine() ของคลาส Console ซึ่งเป็น static method ด้วยกัน <br>
-![](./Picture/Lab8_5.png)
+
 
 ## 8.2.2 Member constant (Constant ของ class)
 Member constants มีลักษณะเหมือน local constants ในหัวข้อที่เรียนมาแล้ว  แต่ในกรณีนี้จะเป็นสมาชิกระดับคลาส 
@@ -58,9 +60,9 @@ namespace ConstantMemberExample
     }
 }
 ```
+![image](https://github.com/Poramat45/Week-08/assets/115066249/a2f0fa70-67b6-48d8-891d-c02565440d7d)
 
 * โปรแกรมนี้เป็นโปรแกรมที่ใช้ค่าคงที่ (constant member) เพื่อคำนวณหาพื้นที่ของวงกลม โดยในคลาส MyCircle มีค่าคงที่ PI ที่กำหนดไว้เป็น 3.14159 และมีเมธอด PrintArea ที่รับพารามิเตอร์เป็นรัศมีของวงกลม โดยใช้ค่าคงที่ PI ในการคำนวณหาพื้นที่ ส่วนใน Main method จะเรียกใช้เมธอด PrintArea ของคลาส MyCircle โดยส่งพารามิเตอร์เป็นค่ารัศมี 5.0f และแสดงผลลัพธ์ของการคำนวณพื้นที่ของวงกลมผ่าน Console <br>
-![](./Picture/Lab8_6.png)
 
 ## 8.2.3 Constant in expression
 constant สามารถถูกนำไปใช้ใน expression ได้เช่นเดียวกับ variable ทั่วๆ ไป 
@@ -94,9 +96,10 @@ namespace ConstantMemberExample
     }
 }
 ```
+![image](https://github.com/Poramat45/Week-08/assets/115066249/a9996a06-cb8c-4722-bb0e-c43f76e85e0a)
 
 * โปรแกรมด้านบนเป็นตัวอย่างการใช้ค่าคงที่ (constant) ในคลาส MyCircle เพื่อคำนวณพื้นที่และเส้นรอบวงของวงกลม โดยมี PI และ PI2 เป็นค่าคงที่ที่ไม่สามารถเปลี่ยนแปลงได้ เมื่อเรียกใช้งาน MyCircle.PrintArea(5.0f) จะคำนวณพื้นที่ของวงกลมที่มีรัศมี 5.0 หน่วย และแสดงผลลัพธ์ด้วย Console.WriteLine() ในที่นี้จะแสดงข้อความว่า "The area of circle is [ผลลัพธ์] square unit." เมื่อเรียกใช้งาน MyCircle.PrintCircumference(5.0f) จะคำนวณความยาวเส้นรอบวงของวงกลมที่มีรัศมี 5.0 หน่วย และแสดงผลลัพธ์ด้วย Console.WriteLine() ในที่นี้จะแสดงข้อความว่า "The circumference of circle is [ผลลัพธ์] square unit." <br>
-![](./Picture/Lab8_7.png)
+
 ## 8.2.4 change value of constant
 ถ้าพยายามกำหนดค่าใหม่ให้แก่ constant จะเกิด error ในขั้นตอนการ compile
 
@@ -123,9 +126,13 @@ namespace ConstantMemberExample
     }
 }
 ```
+![image](https://github.com/Poramat45/Week-08/assets/115066249/4939b289-efef-4824-8a76-d52aec22f1f8)
+![image](https://github.com/Poramat45/Week-08/assets/115066249/be26f2bb-2c0a-4e7f-90ea-d2775959bfbe)
+
+
 * โปรแกรมนี้เป็นตัวอย่างการใช้ค่าคงที่ (constant) ในภาษา C# โดยใช้ตัวอย่างของการคำนวณพื้นที่วงกลม โดยกำหนดค่า PI ให้เป็นค่าคงที่ 3.14159 ดังนั้นสามารถเรียกใช้เมธอด PrintArea ของคลาส MyCircle และส่งค่ารัศมีของวงกลมไปในพารามิเตอร์ จากนั้นโปรแกรมจะคำนวณพื้นที่ของวงกลมด้วยสูตร PI * r * r แล้วแสดงผลลัพธ์ออกทางหน้าจอ
 ในการแก้ไขโค้ดที่กำหนดค่าคงที่ PI ให้ใช้คำสำคัญ public const double PI = 3.14159; เนื่องจากตัวแปรค่าคงที่ต้องกำหนดค่าแล้วไม่สามารถเปลี่ยนแปลงค่าได้หลังจากกำหนดค่าแล้ว ในที่นี้กำหนดให้ PI เป็น public เพื่อให้สามารถเรียกใช้ค่าคงที่นี้ได้จากทุกที่ในโปรแกรมและเป็น const เพื่อให้เวลาเรียกใช้ PI แล้วสามารถใช้ค่า PI นี้ได้ตลอดการทำงานของโปรแกรมโดยไม่มีการเปลี่ยนแปลงค่า PI อีกครั้ง ในท้ายที่สุดโปรแกรมจะแสดงผลลัพธ์การคำนวณพื้นที่ของวงกลมออกทางหน้าจอด้วยค่า PI ที่กำหนดไว้แล้ว ซึ่งจะเป็นค่าคงที่ตลอดระยะเวลาในการทำงานของโปรแกรม <br>
-![](./Picture/Lab8_8.png)
+
 
 ## 8.2.5 public static constant
 
@@ -151,8 +158,11 @@ namespace ConstantMemberExample
     }
 }
 ```
+![image](https://github.com/Poramat45/Week-08/assets/115066249/c0a07b49-2246-4827-9f7c-cac065b2ee94)
+![image](https://github.com/Poramat45/Week-08/assets/115066249/e45cfbe4-9588-4274-8f24-dd7a822238b2)
+
 * โค้ดดั้งเดิมมี syntax error เนื่องจากต้องประกาศค่าคงที่ของ static member ด้วยคีย์เวิร์ด readonly แทนการใช้ const ซึ่งต่างกันตรงที่ const จะต้องกำหนดค่าไว้ตอน compile time และไม่สามารถเปลี่ยนแปลงค่าได้ ในขณะที่ readonly สามารถกำหนดค่าได้ตอน runtime แต่หลังจากกำหนดค่าแล้วจะไม่สามารถเปลี่ยนแปลงค่าได้อีก <br>
-![](./Picture/Lab8_9.png)
+
 
 ## คำถาม
 
