--- a/64030278/8.3 Properties.md
+++ b/64030278/8.3 Properties.md
@@ -31,7 +31,7 @@ namespace PropertyExample
     }
 }
 ```
-![](./Picture/Lab8_10.png)
+![image](https://github.com/Poramat45/Week-08/assets/115066249/c0ce684f-137c-4be3-9616-8b0fb721a15c)
 
 ## 8.3.2 เพิ่ม property
 
@@ -60,7 +60,7 @@ namespace PropertyExample
     }
 }
 ```
-![](./Picture/Lab8_11.png)
+![image](https://github.com/Poramat45/Week-08/assets/115066249/b7eb3982-7031-45a8-8563-6522fede25bc)
 
 ## 8.3.3  การใช้งาน getter/setter
 
@@ -91,7 +91,7 @@ namespace PropertyExample
     }
 }
 ```
-![](./Picture/Lab8_12.png)
+![image](https://github.com/Poramat45/Week-08/assets/115066249/488f5bba-22fa-4fa5-bf9e-cca165e5e1d7)
 
 ## 8.3.4 properties calculation
 
@@ -118,7 +118,7 @@ namespace PropertyExample
     }
 }
 ```
-![](./Picture/Lab8_13.png)
+![image](https://github.com/Poramat45/Week-08/assets/115066249/a2f61081-1112-4c80-b891-33f1c9a7d220)
 ## 8.3.5 properties calculation
 
 รันโปรแกรมต่อไปนี้และบันทึกผล
@@ -147,7 +147,7 @@ namespace PropertyExample
     }
 }
 ```
-![](./Picture/Lab8_14.png)
+![image](https://github.com/Poramat45/Week-08/assets/115066249/e7a4b670-d41d-4a5e-8a4e-6f6065d9adae)
 ## 8.3.6 properties calculation
 
 รันโปรแกรมต่อไปนี้และบันทึกผล
@@ -187,7 +187,7 @@ namespace PropertyExample
     }
 }
 ```
-![](./Picture/Lab8_15.png)
+![image](https://github.com/Poramat45/Week-08/assets/115066249/3c47f712-a4ea-4695-b8ad-9365bb198acf)
 ## คำถาม
 
 1. Fields และ properties ต่างกันอย่างไร
