--- a/64030244/Labs/8.2 Constant Members.md
+++ b/64030244/Labs/8.2 Constant Members.md
@@ -27,6 +27,15 @@ namespace ConstantMemberExample
 }
 ```
 
+1. ประกาศตัวแปร radius ชนิด double และกำหนดค่าเท่ากับ 5.0
+2. ประกาศตัวแปรคงที่ Pi ชนิด double และกำหนเค่าเท่ากับ 3.14
+3. แสดงข้อความยินดีต้อนรับ
+4. แสดงค่า radius 
+5. ประกาศตัวแปร double area มีค่าคือ Pi * radius*radius
+6. แสดงค่า area
+
+![image](https://github.com/CHAIYAPRUK/Week-08/assets/115066395/46af99bb-e6ec-4c7c-99dc-28e622296309)
+
 
 ## 8.2.2 Member constant (Constant ของ class)
 Member constants มีลักษณะเหมือน local constants ในหัวข้อที่เรียนมาแล้ว  แต่ในกรณีนี้จะเป็นสมาชิกระดับคลาส 
@@ -58,6 +67,12 @@ namespace ConstantMemberExample
 }
 ```
 
+1. ประกาศ class Mycircle
+2. ประกาศตัวแปรค่าคงที่ ชนิด double ชื่อ PI
+3. ประกาศ method PrintArea ที่รับค่า radius โดยประกาศตัวแปร area ที่มีค่าคือ PI * radius * radius และแสดงผลค่า area ในแบบทศนิยม 4 ตำแหน่ง
+4. สร้าง class program และ method main จากนั้นก็เรียกใช้ method printarea จาก class  mycircle
+
+![image](https://github.com/CHAIYAPRUK/Week-08/assets/115066395/fd26b29b-dc21-441c-a68d-5b973ed81ae6)
 
 ## 8.2.3 Constant in expression
 constant สามารถถูกนำไปใช้ใน expression ได้เช่นเดียวกับ variable ทั่วๆ ไป 
@@ -92,6 +107,14 @@ namespace ConstantMemberExample
 }
 ```
 
+1. ประกาศ class mycircle
+2. ประกาตัวแปรคงที่ชนิด double ชื่อ PI และ PI2
+3. สร้าง static method printarea ที่รับค่า radius โดยประกาศตัวแปร area ที่มีค่าคือ PI * radius * radius และแสดงผลค่า area ในแบบทศนิยม 4 ตำแหน่ง
+4. สร้าง static method  printcircumference ที่รับค่า radius โดยประกาศตัวแปร circumference ที่มีค่าคือ PI2 * radius และแสดงผลค่า circumference ในแบบทศนิยม 4 ตำแหน่ง
+5. ประกาศ class program และ method main ที่เรียกใช้ method printarea และ printcircumference จาก class mycircle โดยส่งค่า 5.0 เป็นพารามิเตอร์ไปยัง method
+
+![image](https://github.com/CHAIYAPRUK/Week-08/assets/115066395/98b00e4f-1b0b-4bce-bbcc-3fa960aae13c)
+
 ## 8.2.4 change value of constant
 ถ้าพยายามกำหนดค่าใหม่ให้แก่ constant จะเกิด error ในขั้นตอนการ compile
 
@@ -119,6 +142,8 @@ namespace ConstantMemberExample
 }
 ```
 
+![image](https://github.com/CHAIYAPRUK/Week-08/assets/115066395/48ccc232-0699-43db-953c-03c70b693095)
+
 ## 8.2.5 public static constant
 
 เราสามารถกำหนด modifier ของ constant ให้เป็น public ได้  
@@ -144,13 +169,21 @@ namespace ConstantMemberExample
 }
 ```
 
+![image](https://github.com/CHAIYAPRUK/Week-08/assets/115066395/6449ff89-7705-4268-a293-a3dd94ed532a)
 
 ## คำถาม
 
 1. Local constants ต่างจาก member constants อย่างไร
 
+Local constance คือ ตัวแปรที่ถูกกำหนดให้เป้นค่าคงที่ซี่งถูกประกาศไว้ในส่วนของ method
+Member constants คือ ตัวแปรที่ถูกกำหนดเป้นค่าตงที่ซึ่งถูกประกาศไว้ใน class
+
 2. Local constants สามารถเปลี่ยนค่าภายหลังได้หรือไม่
 
+ไม่ได้ หากต้องการแก้ไขค่าคงที่ต้องแก้ไขในโค้ดเท่านั้น
+
 3. Member constants สามารถเปลี่ยนค่าภายหลังได้หรือไม่
+
+ไม่ได้ หากต้องการแก้ไขค่าคงที่ต้องแก้ไขในโค้ดเท่านั้น
 
  
