--- a/64030244/Labs/8.3 Properties.md
+++ b/64030244/Labs/8.3 Properties.md
@@ -32,6 +32,8 @@ namespace PropertyExample
 }
 ```
 
+![image](https://github.com/CHAIYAPRUK/Week-08/assets/115066395/c203e624-29e3-4fee-ac0a-959833a2f287)
+
 ## 8.3.2 เพิ่ม property
 
 รันโปรแกรมต่อไปนี้และบันทึกผล
@@ -59,6 +61,8 @@ namespace PropertyExample
     }
 }
 ```
+
+![image](https://github.com/CHAIYAPRUK/Week-08/assets/115066395/5387ef14-3075-4716-8a9c-d32affd25553)
 
 
 ## 8.3.3  การใช้งาน getter/setter
