--- a/64030244/Labs/8.3 Properties.md
+++ b/64030244/Labs/8.3 Properties.md
@@ -95,6 +95,41 @@ namespace PropertyExample
 }
 ```
 
+![image](https://github.com/CHAIYAPRUK/Week-08/assets/115066395/23641fda-2754-40f9-89e1-f924142efda4)
+
+Error เพราะ ไม่สามารถเรียกใช้ get และ set ในฐานะ method ได้ สามรถเรียกใช้ได้ เช่น 
+Garfield.Age = 5;
+int catAge = Garfield.Age;
+
+``` cs
+using System.Drawing;
+namespace PropertyExample
+{
+
+    class Cat
+    {
+        public int Age { get; set; }
+        public Color SkinColor { get; set; }
+
+    }
+    internal class Program
+    {
+        static void Main(string[] args)
+        {
+            var Garfield = new Cat();
+            // callint setter
+            Garfield.Age = 5;
+
+            // calling getter
+            int catAge = Garfield.Age;
+            Console.WriteLine(catAge);
+        }
+    }
+}
+```
+
+![image](https://github.com/CHAIYAPRUK/Week-08/assets/115066395/4c93baf8-8b5f-4f16-8d51-28ec672d05a7)
+
 
 ## 8.3.4 properties calculation
 
@@ -121,6 +156,8 @@ namespace PropertyExample
     }
 }
 ```
+![image](https://github.com/CHAIYAPRUK/Week-08/assets/115066395/86aa2e2a-637e-4173-83bf-ef481a118225)
+
 
 ## 8.3.5 properties calculation
 
@@ -150,6 +187,8 @@ namespace PropertyExample
     }
 }
 ```
+
+![image](https://github.com/CHAIYAPRUK/Week-08/assets/115066395/29ac1099-2c98-460b-a9ca-e43d318a2226)
 
 ## 8.3.6 properties calculation
 
@@ -191,12 +230,25 @@ namespace PropertyExample
 }
 ```
 
+![image](https://github.com/CHAIYAPRUK/Week-08/assets/115066395/a3b22836-123c-4ede-981c-516a404bbfae)
+
+
 ## คำถาม
 
 1. Fields และ properties ต่างกันอย่างไร
 
+Field คือ ตัวแปรที่สามารถเปลี่ยนแปลค่าได้ซึ่งถูกประกาศในคลาสเพื่อเก็บข้อมูล
+properties คือ วิธีการเข้าถึงและกำหนดค่าของตัวแปรภายในคลาสโดยไม่ต้องเขียน method โดยตะใช้ท method getter and setter ที่มีอยู่แล้วมาใช้สำหรับอ่านและเขียนข้อมูลของตัวแปร
+
 2. เมื่อใดควรใช้ field และเมื่อใดควรใช้ properties
+
+Field ใช้ตอนที่ต้องการเก็บข้อมูลโดยตรงที่ไม่ต้องการการเข้าถึงและไม่ต้องการการตรวจสอบความถูกต้องของข้อมูล
+properties ใช้ตอนที่ต้องการเข้าถึงหรือตั้งค่าตัวแปรโดยต้อบงการให้มีการตรวจสอบความถูกต้องของข้อมูลที่รับเข้ามา และใช้ในตอนที่ต้องการคำนวณค่าข้อมูลเพื่อเก็บลงในคัวแปรโดยที่ไม่ต้องเขียน method เพื่อคำนวณค่า
 
 3. value ใน setter หมายถึงอะไร
 
+ตัวแปรพิเศษของ property ที่ใช้สำหรับเป็นตัวแทนของข้อมูลที่กำลังจะ set ให้กับ properties โดยข้อมูลที่จะ set ให้ properties จะถูกเก็บไว้ที่ value ก่อนนั่นเอง
+
 4. return ใน setter ต้องมี type ตรงกับอะไร
+
+ต้องมี type เป็นชนิดเดียวกับ properties
