Update 8.1 Static Member.md

--- a/64030074/8.1 Static Member.md
+++ b/64030074/8.1 Static Member.md
@@ -34,6 +34,16 @@ namespace StaticMemberExample
 }
 
 ```
+อธิบายโค้ด
+```
+ในคลาส Cat มีตัวแปร legs ที่เป็นตัวแปรของอ็อบเจ็กต์ (instance variable) ซึ่งถูกกำหนดค่าเป็น 4
+ในคลาส Duck มีตัวแปร legs ที่เป็นตัวแปรของคลาส (static variable) ซึ่งถูกกำหนดค่าเป็น 2
+
+สร้างอ็อบเจ็กต์ของคลาส Cat และกำหนดให้ตัวแปร cat เก็บอ็อบเจ็กต์นั้น
+แสดงผลลัพธ์บนหน้าจอว่า "แมวมีขา 4 ขา" โดยเข้าถึงตัวแปร legs ของอ็อบเจ็กต์ cat
+แสดงผลลัพธ์บนหน้าจอว่า "เป็ดมีขา 2 ขา" โดยเข้าถึงตัวแปร legs ของคลาส Duck โดยตรง
+```
+![image](https://github.com/tnpn2545/Week-08/assets/115066414/4414b0b0-585f-4b64-94e5-5dca40a4f0b3)
 
 ## 8.1.2 ให้อธิบายการทำงานของโปรแกรมต่อไปนี้ พร้อมทั้งบันทึกผลการทดลอง
 ```cs
@@ -69,6 +79,22 @@ namespace StaticMemberExample
 }
 
 ```
+อธิบายโค้ด
+```
+ในคลาส Cat มีตัวแปร legs ที่เป็นตัวแปรของอ็อบเจ็กต์ (instance variable) ซึ่งถูกกำหนดค่าเป็น 4
+มีตัวแปร count ที่เป็นตัวแปรของคลาส (static variable) ซึ่งถูกกำหนดค่าเริ่มต้นเป็น 0
+มี Constructor ที่เรียกว่า Cat ที่ถูกเรียกใช้เมื่อสร้างอ็อบเจ็กต์ของคลาส Cat โดยใน Constructor จะทำการเพิ่มค่า count ของคลาส Cat ทีละ 1
+
+สร้างอ็อบเจ็กต์ของคลาส Cat และกำหนดให้ตัวแปร cat เก็บอ็อบเจ็กต์นั้น
+แสดงผลลัพธ์บนหน้าจอว่า "มีแมว 1 ตัว"
+สร้างอ็อบเจ็กต์ของคลาส Cat อีกตัว และกำหนดให้ตัวแปร cat1 เก็บอ็อบเจ็กต์นั้น
+แสดงผลลัพธ์บนหน้าจอว่า "มีแมว 2 ตัว"
+สร้างอาร์เรย์ของอ็อบเจ็กต์ Cat ที่มีขนาด 10
+แสดงผลลัพธ์บนหน้าจอว่า "มีแมว 2 ตัว"
+ในลูป for จะสร้างอ็อบเจ็กต์ Cat ในแต่ละตำแหน่งของอาร์เรย์ catArray
+แสดงผลลัพธ์บนหน้าจอว่า "มีแมว 12 ตัว"
+```
+![image](https://github.com/tnpn2545/Week-08/assets/115066414/a8708c1b-651d-4777-a15a-d2f8547f271c)
 
 ## 8.1.3 ให้อธิบายการทำงานของโปรแกรมต่อไปนี้ พร้อมทั้งบันทึกผลการทดลอง
 
@@ -113,6 +139,22 @@ namespace StaticMemberExample
     }
 }
 ```
+อธิบายโค้ด
+```
+ในคลาส Cat มีตัวแปร legs ที่เป็นตัวแปรของอ็อบเจ็กต์ (instance variable) ซึ่งถูกกำหนดค่าเป็น 4
+มีตัวแปร count ที่เป็นตัวแปรของคลาส (static variable) ซึ่งถูกกำหนดค่าเริ่มต้นเป็น 0
+มี Constructor ที่เรียกว่า Cat ที่ถูกเรียกใช้เมื่อสร้างอ็อบเจ็กต์ของคลาส Cat โดยใน Constructor จะทำการเพิ่มค่า count ของคลาส Cat ทีละ 1
+มีเมธอด PrintCatCount เป็นเมธอดสถิต (static method) ที่ใช้สำหรับแสดงผลลัพธ์ทางหน้าจอว่ามีแมวกี่ตัว
+
+สร้างอ็อบเจ็กต์ของคลาส Cat และกำหนดให้ตัวแปร cat เก็บอ็อบเจ็กต์นั้น
+เรียกใช้เมธอด PrintCatCount เพื่อแสดงผลลัพธ์บนหน้าจอว่ามีแมว 1 ตัว
+สร้างอ็อบเจ็กต์ของคลาส Cat อีกตัว และกำหนดให้ตัวแปร cat1 เก็บอ็อบเจ็กต์นั้น
+เรียกใช้เมธอด PrintCatCount เพื่อแสดงผลลัพธ์บนหน้าจอว่ามีแมว 2 ตัว
+สร้างอาร์เรย์ของอ็อบเจ็กต์ Cat ที่มีขนาด 10
+เรียกใช้เมธอด PrintCatCount เพื่อแสดงผลลัพธ์บนหน้าจอว่ามีแมว 2 ตัว
+ในลูป for จะสร้างอ็อบเจ็กต์ Cat ในแต่ละตำแหน่งของอาร์เรย์ catArray โดยเมื่อสร้างแมวในตำแหน่งแล้ว จะเพิ่มจำนวนแมวทั้งหมดที่ถูกสร้างขึ้นลงในตัวแปร count ของคลาส Cat
+```
+![image](https://github.com/tnpn2545/Week-08/assets/115066414/67ad9245-4ab6-4d13-982d-3cbaae5a8364)
 
 ## 8.1.4 ให้อธิบายการทำงานของโปรแกรมต่อไปนี้ พร้อมทั้งบันทึกผลการทดลอง
 
@@ -150,11 +192,33 @@ namespace StaticMemberExample
     }
 }
 ```
+อธิบายโค้ด
+```
+ในคลาส Cat มีตัวแปร legs ที่เป็นตัวแปรของอ็อบเจ็กต์ (instance variable) ซึ่งถูกกำหนดค่าเป็น 4
+มีตัวแปร count ที่เป็นตัวแปรของคลาส (static variable) ซึ่งถูกกำหนดค่าเริ่มต้นเป็น 0
+มี Constructor ที่เรียกว่า Cat ที่ถูกเรียกใช้เมื่อสร้างอ็อบเจ็กต์ของคลาส Cat โดยใน Constructor จะทำการเพิ่มค่า count ของคลาส Cat ทีละ 1
+มีเมธอด PrintCatCount เป็นเมธอดสถิต (static method) ที่ใช้สำหรับแสดงผลลัพธ์ทางหน้าจอว่ามีแมวกี่ตัว
+
+สร้างอ็อบเจ็กต์ของคลาส Cat และกำหนดให้ตัวแปร cat เก็บอ็อบเจ็กต์นั้น
+เรียกใช้เมธอด PrintCatCount เพื่อแสดงผลลัพธ์บนหน้าจอว่ามีแมว 1 ตัว
+สร้างอ็อบเจ็กต์ของคลาส Cat อีกตัว และกำหนดให้ตัวแปร cat1 เก็บอ็อบเจ็กต์นั้น
+เรียกใช้เมธอด PrintCatCount ที่เป็นเมธอดสถิต ผ่านตัวแปร cat1 เพื่อแสดงผลลัพธ์บนหน้าจอว่ามีแมว 2 ตัว
+```
+![image](https://github.com/tnpn2545/Week-08/assets/115066414/67d01086-a150-4955-9414-2cd61eaec354)
 
 
 ## คำถาม
 
 1. Static member ต่างจาก instance member  อย่างไร
-
+    - Static member
+        -   เป็นสมาชิกของคลาสที่เป็นร่วมกันทั้งคลาสทั้งหมด ไม่ขึ้นอยู่กับการสร้างอ็อบเจ็กต์
+        -   สามารถเข้าถึงได้โดยตรงผ่านชื่อคลาส โดยไม่ต้องสร้างอ็อบเจ็กต์ก่อน
+        -   มีค่าเดียวกันในทุกอ็อบเจ็กต์ของคลาส
+        -   สามารถเรียกใช้ได้ทั้งในเมธอดสถิตและเมธอดตัวอินสแตนซ์
+    - Instance member
+        -   เป็นสมาชิกของอ็อบเจ็กต์ของคลาส
+        -   ต้องสร้างอ็อบเจ็กต์ก่อนที่จะเข้าถึงสมาชิกในคลาส
+        -   มีค่าแตกต่างไปในแต่ละอ็อบเจ็กต์ของคลาส
+        -   สามารถเรียกใช้ได้เฉพาะในเอกสารตัวอินสแตนซ์ที่สร้างขึ้น
 2. สถานการณ์ใดที่ควรใช้ static member
-
+    - สถานการณ์ที่ต้องการให้ข้อมูลหรือฟังก์ชันเป็นร่วมกันทั่วคลาส โดยไม่ขึ้นอยู่กับการสร้างอ็อบเจ็กต์
